# clear_urls_bot

./: .env  .env.example  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  render.yaml  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
api/: index.rs
docs/: API.md  ARCHITECTURE.md
src/: ai_sanitizer.rs  bot.rs  config.rs  db.rs  i18n.rs  lib.rs  logging.rs  main.rs  models.rs  sanitizer.rs  web.rs
templates/: admin.html  dashboard.html  login.html
wasm-functions/: Cargo.toml
wasm-functions/src/: lib.rs
