[package]
name = "clear_urls_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
axum = "0.7.9"
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed", "query"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "set-header"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
regex = "1.10"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
askama = "0.12"
tower = "0.4"
futures = "0.3"
time = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1