[package]
name = "clear_urls_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
teloxide = { version = "0.17", features = ["macros"] }
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie", "cookie-signed", "query"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "set-header"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "rustls"] }
regex = "1.10"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time", "registry"] }
tracing-appender = "0.2"
tracing-error = "0.2"
dotenvy = "0.15"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
askama = "0.15"
tower = { version = "0.5", features = ["util"] }
futures = "0.3"
time = "0.3"
async-stream = "0.3"
vercel_runtime = { version = "2.1", optional = true, features = ["axum"] }

[[bin]]
name = "index"
path = "api/index.rs"
required-features = ["vercel"]

[features]
default = []
vercel = ["vercel_runtime"]
supabase = []

[profile.release]
lto = true
strip = true
codegen-units = 1